Assignment 1 resources/parser.output
   0  $accept : %entry% $end

   1  program : mainclass classdeclkleene

   2  classdeclkleene :
   3                  | classdeclkleene classdecl

   4  mainclass : CLASS_KEYWORD CLASSNAME LBRACKET VOID_KEYWORD MAIN_KEYWORD LPAREN fmllist RPAREN mdbody RBRACKET

   5  classdecl : CLASS_KEYWORD CLASSNAME LBRACKET classbody RBRACKET

   6  classbody :
   7            | aaaaa

   8  aaaaa : typee IDENTIFIER ffff

   9  ffff : SEMICOLON aaaaa
  10       | mddeclliststart

  11  mddeclliststart : LPAREN fmllist RPAREN mdbody mddecllist

  12  mddecllist : typee IDENTIFIER LPAREN fmllist RPAREN mdbody mddecllist
  13             |

  14  vardecl : typee IDENTIFIER SEMICOLON

  15  vardeclkeene :
  16               | vardeclkeene vardecl

  17  fmllist :
  18          | typee IDENTIFIER fmlrestkleene

  19  fmlrestkleene :
  20                | fmlrestkleene fmlrest

  21  fmlrest : COMMA typee IDENTIFIER

  22  typee : INT_KEYWORD
  23        | BOOL_KEYWORD
  24        | STRING_KEYWORD
  25        | VOID_KEYWORD
  26        | CLASSNAME

  27  mdbody : LBRACKET vardeclkeene stmtpositive RBRACKET

  28  stmtkleene :
  29             | stmtkleene stmt

  30  stmtpositive : stmtkleene stmt

  31  stmt : IF_KEYWORD LPAREN exp RPAREN LBRACKET stmtpositive RBRACKET ELSE_KEYWORD LBRACKET stmtpositive RBRACKET
  32       | WHILE_KEYWORD LPAREN exp RPAREN LBRACKET stmtkleene RBRACKET
  33       | READLN_KEYWORD LPAREN IDENTIFIER RPAREN SEMICOLON
  34       | PRINTLN_KEYWORD LPAREN exp RPAREN SEMICOLON
  35       | IDENTIFIER ASSSIGN exp SEMICOLON
  36       | atom DOT IDENTIFIER ASSSIGN exp SEMICOLON
  37       | atom LPAREN explist RPAREN
  38       | RETURN_KEYWORD exp SEMICOLON
  39       | RETURN_KEYWORD SEMICOLON

  40  exp : bexp
  41      | aexp
  42      | sexp

  43  bexp : rexp
  44       | rexp AND_OPERATOR rexp
  45       | rexp OR_OPERATOR rexp

  46  rexp : aexp bop aexp
  47       | bgrd

  48  bop : RELATIVE_OPERATOR
  49      | EXCLAMATION_POINT ASSSIGN
  50      | ASSSIGN ASSSIGN

  51  bgrd : EXCLAMATION_POINT bgrd
  52       | BOOLEAN_LITERAL
  53       | atom

  54  aexp : ftr
  55       | aexp PLUS aexp
  56       | aexp MINUS aexp
  57       | aexp MULTIPLY aexp
  58       | aexp DIVIDE aexp

  59  ftr : INTLIT
  60      | MINUS ftr
  61      | atom

  62  sexp : STRING_LITERAL
  63       | atom

  64  atom : atom DOT IDENTIFIER
  65       | atom LPAREN explist RPAREN
  66       | THIS_KEYWORD
  67       | IDENTIFIER
  68       | NEW_KEYWORD CLASSNAME LPAREN RPAREN
  69       | LPAREN exp RPAREN
  70       | NULL_KEYWORD

  71  explist :
  72          | exprlists

  73  exprlists : exp
  74            | exprlists COMMA exp

  75  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (75)

	CLASS_KEYWORD  shift 3
	.  error

	program  goto 4
	mainclass  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	mainclass : CLASS_KEYWORD . CLASSNAME LBRACKET VOID_KEYWORD MAIN_KEYWORD LPAREN fmllist RPAREN mdbody RBRACKET  (4)

	CLASSNAME  shift 6
	.  error


state 4
	%entry% : '\001' program .  (75)

	.  reduce 75


state 5
	program : mainclass . classdeclkleene  (1)
	classdeclkleene : .  (2)

	.  reduce 2

	classdeclkleene  goto 7


state 6
	mainclass : CLASS_KEYWORD CLASSNAME . LBRACKET VOID_KEYWORD MAIN_KEYWORD LPAREN fmllist RPAREN mdbody RBRACKET  (4)

	LBRACKET  shift 8
	.  error


state 7
	program : mainclass classdeclkleene .  (1)
	classdeclkleene : classdeclkleene . classdecl  (3)

	CLASS_KEYWORD  shift 9
	$end  reduce 1

	classdecl  goto 10


state 8
	mainclass : CLASS_KEYWORD CLASSNAME LBRACKET . VOID_KEYWORD MAIN_KEYWORD LPAREN fmllist RPAREN mdbody RBRACKET  (4)

	VOID_KEYWORD  shift 11
	.  error


state 9
	classdecl : CLASS_KEYWORD . CLASSNAME LBRACKET classbody RBRACKET  (5)

	CLASSNAME  shift 12
	.  error


state 10
	classdeclkleene : classdeclkleene classdecl .  (3)

	.  reduce 3


state 11
	mainclass : CLASS_KEYWORD CLASSNAME LBRACKET VOID_KEYWORD . MAIN_KEYWORD LPAREN fmllist RPAREN mdbody RBRACKET  (4)

	MAIN_KEYWORD  shift 13
	.  error


state 12
	classdecl : CLASS_KEYWORD CLASSNAME . LBRACKET classbody RBRACKET  (5)

	LBRACKET  shift 14
	.  error


state 13
	mainclass : CLASS_KEYWORD CLASSNAME LBRACKET VOID_KEYWORD MAIN_KEYWORD . LPAREN fmllist RPAREN mdbody RBRACKET  (4)

	LPAREN  shift 15
	.  error


state 14
	classdecl : CLASS_KEYWORD CLASSNAME LBRACKET . classbody RBRACKET  (5)
	classbody : .  (6)

	VOID_KEYWORD  shift 16
	CLASSNAME  shift 17
	INT_KEYWORD  shift 18
	BOOL_KEYWORD  shift 19
	STRING_KEYWORD  shift 20
	RBRACKET  reduce 6

	classbody  goto 21
	aaaaa  goto 22
	typee  goto 23


state 15
	mainclass : CLASS_KEYWORD CLASSNAME LBRACKET VOID_KEYWORD MAIN_KEYWORD LPAREN . fmllist RPAREN mdbody RBRACKET  (4)
	fmllist : .  (17)

	VOID_KEYWORD  shift 16
	CLASSNAME  shift 17
	INT_KEYWORD  shift 18
	BOOL_KEYWORD  shift 19
	STRING_KEYWORD  shift 20
	RPAREN  reduce 17

	fmllist  goto 24
	typee  goto 25


state 16
	typee : VOID_KEYWORD .  (25)

	.  reduce 25


state 17
	typee : CLASSNAME .  (26)

	.  reduce 26


state 18
	typee : INT_KEYWORD .  (22)

	.  reduce 22


state 19
	typee : BOOL_KEYWORD .  (23)

	.  reduce 23


state 20
	typee : STRING_KEYWORD .  (24)

	.  reduce 24


state 21
	classdecl : CLASS_KEYWORD CLASSNAME LBRACKET classbody . RBRACKET  (5)

	RBRACKET  shift 26
	.  error


state 22
	classbody : aaaaa .  (7)

	.  reduce 7


state 23
	aaaaa : typee . IDENTIFIER ffff  (8)

	IDENTIFIER  shift 27
	.  error


state 24
	mainclass : CLASS_KEYWORD CLASSNAME LBRACKET VOID_KEYWORD MAIN_KEYWORD LPAREN fmllist . RPAREN mdbody RBRACKET  (4)

	RPAREN  shift 28
	.  error


state 25
	fmllist : typee . IDENTIFIER fmlrestkleene  (18)

	IDENTIFIER  shift 29
	.  error


state 26
	classdecl : CLASS_KEYWORD CLASSNAME LBRACKET classbody RBRACKET .  (5)

	.  reduce 5


state 27
	aaaaa : typee IDENTIFIER . ffff  (8)

	LPAREN  shift 30
	SEMICOLON  shift 31
	.  error

	ffff  goto 32
	mddeclliststart  goto 33


state 28
	mainclass : CLASS_KEYWORD CLASSNAME LBRACKET VOID_KEYWORD MAIN_KEYWORD LPAREN fmllist RPAREN . mdbody RBRACKET  (4)

	LBRACKET  shift 34
	.  error

	mdbody  goto 35


state 29
	fmllist : typee IDENTIFIER . fmlrestkleene  (18)
	fmlrestkleene : .  (19)

	.  reduce 19

	fmlrestkleene  goto 36


state 30
	mddeclliststart : LPAREN . fmllist RPAREN mdbody mddecllist  (11)
	fmllist : .  (17)

	VOID_KEYWORD  shift 16
	CLASSNAME  shift 17
	INT_KEYWORD  shift 18
	BOOL_KEYWORD  shift 19
	STRING_KEYWORD  shift 20
	RPAREN  reduce 17

	fmllist  goto 37
	typee  goto 25


state 31
	ffff : SEMICOLON . aaaaa  (9)

	VOID_KEYWORD  shift 16
	CLASSNAME  shift 17
	INT_KEYWORD  shift 18
	BOOL_KEYWORD  shift 19
	STRING_KEYWORD  shift 20
	.  error

	aaaaa  goto 38
	typee  goto 23


state 32
	aaaaa : typee IDENTIFIER ffff .  (8)

	.  reduce 8


state 33
	ffff : mddeclliststart .  (10)

	.  reduce 10


state 34
	mdbody : LBRACKET . vardeclkeene stmtpositive RBRACKET  (27)
	vardeclkeene : .  (15)

	.  reduce 15

	vardeclkeene  goto 39


state 35
	mainclass : CLASS_KEYWORD CLASSNAME LBRACKET VOID_KEYWORD MAIN_KEYWORD LPAREN fmllist RPAREN mdbody . RBRACKET  (4)

	RBRACKET  shift 40
	.  error


state 36
	fmllist : typee IDENTIFIER fmlrestkleene .  (18)
	fmlrestkleene : fmlrestkleene . fmlrest  (20)

	COMMA  shift 41
	RPAREN  reduce 18

	fmlrest  goto 42


state 37
	mddeclliststart : LPAREN fmllist . RPAREN mdbody mddecllist  (11)

	RPAREN  shift 43
	.  error


state 38
	ffff : SEMICOLON aaaaa .  (9)

	.  reduce 9


state 39
	vardeclkeene : vardeclkeene . vardecl  (16)
	mdbody : LBRACKET vardeclkeene . stmtpositive RBRACKET  (27)
	stmtkleene : .  (28)

	VOID_KEYWORD  shift 16
	CLASSNAME  shift 17
	INT_KEYWORD  shift 18
	BOOL_KEYWORD  shift 19
	STRING_KEYWORD  shift 20
	LPAREN  reduce 28
	IF_KEYWORD  reduce 28
	RETURN_KEYWORD  reduce 28
	WHILE_KEYWORD  reduce 28
	THIS_KEYWORD  reduce 28
	NEW_KEYWORD  reduce 28
	READLN_KEYWORD  reduce 28
	PRINTLN_KEYWORD  reduce 28
	NULL_KEYWORD  reduce 28
	IDENTIFIER  reduce 28

	typee  goto 44
	vardecl  goto 45
	stmtpositive  goto 46
	stmtkleene  goto 47


state 40
	mainclass : CLASS_KEYWORD CLASSNAME LBRACKET VOID_KEYWORD MAIN_KEYWORD LPAREN fmllist RPAREN mdbody RBRACKET .  (4)

	.  reduce 4


state 41
	fmlrest : COMMA . typee IDENTIFIER  (21)

	VOID_KEYWORD  shift 16
	CLASSNAME  shift 17
	INT_KEYWORD  shift 18
	BOOL_KEYWORD  shift 19
	STRING_KEYWORD  shift 20
	.  error

	typee  goto 48


state 42
	fmlrestkleene : fmlrestkleene fmlrest .  (20)

	.  reduce 20


state 43
	mddeclliststart : LPAREN fmllist RPAREN . mdbody mddecllist  (11)

	LBRACKET  shift 34
	.  error

	mdbody  goto 49


state 44
	vardecl : typee . IDENTIFIER SEMICOLON  (14)

	IDENTIFIER  shift 50
	.  error


state 45
	vardeclkeene : vardeclkeene vardecl .  (16)

	.  reduce 16


state 46
	mdbody : LBRACKET vardeclkeene stmtpositive . RBRACKET  (27)

	RBRACKET  shift 51
	.  error


state 47
	stmtkleene : stmtkleene . stmt  (29)
	stmtpositive : stmtkleene . stmt  (30)

	LPAREN  shift 52
	IF_KEYWORD  shift 53
	RETURN_KEYWORD  shift 54
	WHILE_KEYWORD  shift 55
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	READLN_KEYWORD  shift 58
	PRINTLN_KEYWORD  shift 59
	NULL_KEYWORD  shift 60
	IDENTIFIER  shift 61
	.  error

	stmt  goto 62
	atom  goto 63


state 48
	fmlrest : COMMA typee . IDENTIFIER  (21)

	IDENTIFIER  shift 64
	.  error


state 49
	mddeclliststart : LPAREN fmllist RPAREN mdbody . mddecllist  (11)
	mddecllist : .  (13)

	VOID_KEYWORD  shift 16
	CLASSNAME  shift 17
	INT_KEYWORD  shift 18
	BOOL_KEYWORD  shift 19
	STRING_KEYWORD  shift 20
	RBRACKET  reduce 13

	typee  goto 65
	mddecllist  goto 66


state 50
	vardecl : typee IDENTIFIER . SEMICOLON  (14)

	SEMICOLON  shift 67
	.  error


state 51
	mdbody : LBRACKET vardeclkeene stmtpositive RBRACKET .  (27)

	.  reduce 27


state 52
	atom : LPAREN . exp RPAREN  (69)

	MINUS  shift 68
	LPAREN  shift 52
	EXCLAMATION_POINT  shift 69
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 71
	STRING_LITERAL  shift 72
	INTLIT  shift 73
	.  error

	exp  goto 74
	atom  goto 75
	bexp  goto 76
	aexp  goto 77
	sexp  goto 78
	rexp  goto 79
	bgrd  goto 80
	ftr  goto 81


state 53
	stmt : IF_KEYWORD . LPAREN exp RPAREN LBRACKET stmtpositive RBRACKET ELSE_KEYWORD LBRACKET stmtpositive RBRACKET  (31)

	LPAREN  shift 82
	.  error


state 54
	stmt : RETURN_KEYWORD . exp SEMICOLON  (38)
	stmt : RETURN_KEYWORD . SEMICOLON  (39)

	MINUS  shift 68
	LPAREN  shift 52
	EXCLAMATION_POINT  shift 69
	SEMICOLON  shift 83
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 71
	STRING_LITERAL  shift 72
	INTLIT  shift 73
	.  error

	exp  goto 84
	atom  goto 75
	bexp  goto 76
	aexp  goto 77
	sexp  goto 78
	rexp  goto 79
	bgrd  goto 80
	ftr  goto 81


state 55
	stmt : WHILE_KEYWORD . LPAREN exp RPAREN LBRACKET stmtkleene RBRACKET  (32)

	LPAREN  shift 85
	.  error


state 56
	atom : THIS_KEYWORD .  (66)

	.  reduce 66


state 57
	atom : NEW_KEYWORD . CLASSNAME LPAREN RPAREN  (68)

	CLASSNAME  shift 86
	.  error


state 58
	stmt : READLN_KEYWORD . LPAREN IDENTIFIER RPAREN SEMICOLON  (33)

	LPAREN  shift 87
	.  error


state 59
	stmt : PRINTLN_KEYWORD . LPAREN exp RPAREN SEMICOLON  (34)

	LPAREN  shift 88
	.  error


state 60
	atom : NULL_KEYWORD .  (70)

	.  reduce 70


state 61
	stmt : IDENTIFIER . ASSSIGN exp SEMICOLON  (35)
	atom : IDENTIFIER .  (67)

	ASSSIGN  shift 89
	DOT  reduce 67
	LPAREN  reduce 67


state 62
	stmtkleene : stmtkleene stmt .  (29)
	stmtpositive : stmtkleene stmt .  (30)

	LPAREN  reduce 29
	RBRACKET  reduce 30
	IF_KEYWORD  reduce 29
	RETURN_KEYWORD  reduce 29
	WHILE_KEYWORD  reduce 29
	THIS_KEYWORD  reduce 29
	NEW_KEYWORD  reduce 29
	READLN_KEYWORD  reduce 29
	PRINTLN_KEYWORD  reduce 29
	NULL_KEYWORD  reduce 29
	IDENTIFIER  reduce 29


state 63
	stmt : atom . DOT IDENTIFIER ASSSIGN exp SEMICOLON  (36)
	stmt : atom . LPAREN explist RPAREN  (37)
	atom : atom . DOT IDENTIFIER  (64)
	atom : atom . LPAREN explist RPAREN  (65)

	DOT  shift 90
	LPAREN  shift 91
	.  error


state 64
	fmlrest : COMMA typee IDENTIFIER .  (21)

	.  reduce 21


state 65
	mddecllist : typee . IDENTIFIER LPAREN fmllist RPAREN mdbody mddecllist  (12)

	IDENTIFIER  shift 92
	.  error


state 66
	mddeclliststart : LPAREN fmllist RPAREN mdbody mddecllist .  (11)

	.  reduce 11


state 67
	vardecl : typee IDENTIFIER SEMICOLON .  (14)

	.  reduce 14


state 68
	ftr : MINUS . ftr  (60)

	MINUS  shift 68
	LPAREN  shift 52
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	IDENTIFIER  shift 71
	INTLIT  shift 73
	.  error

	atom  goto 93
	ftr  goto 94


state 69
	bgrd : EXCLAMATION_POINT . bgrd  (51)

	LPAREN  shift 52
	EXCLAMATION_POINT  shift 69
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 71
	.  error

	atom  goto 95
	bgrd  goto 96


state 70
	bgrd : BOOLEAN_LITERAL .  (52)

	.  reduce 52


state 71
	atom : IDENTIFIER .  (67)

	.  reduce 67


state 72
	sexp : STRING_LITERAL .  (62)

	.  reduce 62


state 73
	ftr : INTLIT .  (59)

	.  reduce 59


state 74
	atom : LPAREN exp . RPAREN  (69)

	RPAREN  shift 97
	.  error


75: reduce/reduce conflict (reduce 53, reduce 61) on RPAREN
75: reduce/reduce conflict (reduce 53, reduce 63) on RPAREN
75: reduce/reduce conflict (reduce 53, reduce 61) on SEMICOLON
75: reduce/reduce conflict (reduce 53, reduce 63) on SEMICOLON
75: reduce/reduce conflict (reduce 53, reduce 61) on COMMA
75: reduce/reduce conflict (reduce 53, reduce 63) on COMMA
state 75
	bgrd : atom .  (53)
	ftr : atom .  (61)
	sexp : atom .  (63)
	atom : atom . DOT IDENTIFIER  (64)
	atom : atom . LPAREN explist RPAREN  (65)

	DOT  shift 98
	LPAREN  shift 99
	ASSSIGN  reduce 61
	PLUS  reduce 61
	MINUS  reduce 61
	MULTIPLY  reduce 61
	DIVIDE  reduce 61
	RELATIVE_OPERATOR  reduce 61
	RPAREN  reduce 53
	EXCLAMATION_POINT  reduce 61
	SEMICOLON  reduce 53
	COMMA  reduce 53
	AND_OPERATOR  reduce 53
	OR_OPERATOR  reduce 53


state 76
	exp : bexp .  (40)

	.  reduce 40


state 77
	exp : aexp .  (41)
	rexp : aexp . bop aexp  (46)
	aexp : aexp . PLUS aexp  (55)
	aexp : aexp . MINUS aexp  (56)
	aexp : aexp . MULTIPLY aexp  (57)
	aexp : aexp . DIVIDE aexp  (58)

	ASSSIGN  shift 100
	PLUS  shift 101
	MINUS  shift 102
	MULTIPLY  shift 103
	DIVIDE  shift 104
	RELATIVE_OPERATOR  shift 105
	EXCLAMATION_POINT  shift 106
	RPAREN  reduce 41
	SEMICOLON  reduce 41
	COMMA  reduce 41

	bop  goto 107


state 78
	exp : sexp .  (42)

	.  reduce 42


state 79
	bexp : rexp .  (43)
	bexp : rexp . AND_OPERATOR rexp  (44)
	bexp : rexp . OR_OPERATOR rexp  (45)

	AND_OPERATOR  shift 108
	OR_OPERATOR  shift 109
	RPAREN  reduce 43
	SEMICOLON  reduce 43
	COMMA  reduce 43


state 80
	rexp : bgrd .  (47)

	.  reduce 47


state 81
	aexp : ftr .  (54)

	.  reduce 54


state 82
	stmt : IF_KEYWORD LPAREN . exp RPAREN LBRACKET stmtpositive RBRACKET ELSE_KEYWORD LBRACKET stmtpositive RBRACKET  (31)

	MINUS  shift 68
	LPAREN  shift 52
	EXCLAMATION_POINT  shift 69
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 71
	STRING_LITERAL  shift 72
	INTLIT  shift 73
	.  error

	exp  goto 110
	atom  goto 75
	bexp  goto 76
	aexp  goto 77
	sexp  goto 78
	rexp  goto 79
	bgrd  goto 80
	ftr  goto 81


state 83
	stmt : RETURN_KEYWORD SEMICOLON .  (39)

	.  reduce 39


state 84
	stmt : RETURN_KEYWORD exp . SEMICOLON  (38)

	SEMICOLON  shift 111
	.  error


state 85
	stmt : WHILE_KEYWORD LPAREN . exp RPAREN LBRACKET stmtkleene RBRACKET  (32)

	MINUS  shift 68
	LPAREN  shift 52
	EXCLAMATION_POINT  shift 69
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 71
	STRING_LITERAL  shift 72
	INTLIT  shift 73
	.  error

	exp  goto 112
	atom  goto 75
	bexp  goto 76
	aexp  goto 77
	sexp  goto 78
	rexp  goto 79
	bgrd  goto 80
	ftr  goto 81


state 86
	atom : NEW_KEYWORD CLASSNAME . LPAREN RPAREN  (68)

	LPAREN  shift 113
	.  error


state 87
	stmt : READLN_KEYWORD LPAREN . IDENTIFIER RPAREN SEMICOLON  (33)

	IDENTIFIER  shift 114
	.  error


state 88
	stmt : PRINTLN_KEYWORD LPAREN . exp RPAREN SEMICOLON  (34)

	MINUS  shift 68
	LPAREN  shift 52
	EXCLAMATION_POINT  shift 69
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 71
	STRING_LITERAL  shift 72
	INTLIT  shift 73
	.  error

	exp  goto 115
	atom  goto 75
	bexp  goto 76
	aexp  goto 77
	sexp  goto 78
	rexp  goto 79
	bgrd  goto 80
	ftr  goto 81


state 89
	stmt : IDENTIFIER ASSSIGN . exp SEMICOLON  (35)

	MINUS  shift 68
	LPAREN  shift 52
	EXCLAMATION_POINT  shift 69
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 71
	STRING_LITERAL  shift 72
	INTLIT  shift 73
	.  error

	exp  goto 116
	atom  goto 75
	bexp  goto 76
	aexp  goto 77
	sexp  goto 78
	rexp  goto 79
	bgrd  goto 80
	ftr  goto 81


state 90
	stmt : atom DOT . IDENTIFIER ASSSIGN exp SEMICOLON  (36)
	atom : atom DOT . IDENTIFIER  (64)

	IDENTIFIER  shift 117
	.  error


state 91
	stmt : atom LPAREN . explist RPAREN  (37)
	atom : atom LPAREN . explist RPAREN  (65)
	explist : .  (71)

	MINUS  shift 68
	LPAREN  shift 52
	EXCLAMATION_POINT  shift 69
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 71
	STRING_LITERAL  shift 72
	INTLIT  shift 73
	RPAREN  reduce 71

	exp  goto 118
	atom  goto 75
	explist  goto 119
	bexp  goto 76
	aexp  goto 77
	sexp  goto 78
	rexp  goto 79
	bgrd  goto 80
	ftr  goto 81
	exprlists  goto 120


state 92
	mddecllist : typee IDENTIFIER . LPAREN fmllist RPAREN mdbody mddecllist  (12)

	LPAREN  shift 121
	.  error


state 93
	ftr : atom .  (61)
	atom : atom . DOT IDENTIFIER  (64)
	atom : atom . LPAREN explist RPAREN  (65)

	DOT  shift 98
	LPAREN  shift 99
	ASSSIGN  reduce 61
	PLUS  reduce 61
	MINUS  reduce 61
	MULTIPLY  reduce 61
	DIVIDE  reduce 61
	RELATIVE_OPERATOR  reduce 61
	RPAREN  reduce 61
	EXCLAMATION_POINT  reduce 61
	SEMICOLON  reduce 61
	COMMA  reduce 61
	AND_OPERATOR  reduce 61
	OR_OPERATOR  reduce 61


state 94
	ftr : MINUS ftr .  (60)

	.  reduce 60


state 95
	bgrd : atom .  (53)
	atom : atom . DOT IDENTIFIER  (64)
	atom : atom . LPAREN explist RPAREN  (65)

	DOT  shift 98
	LPAREN  shift 99
	RPAREN  reduce 53
	SEMICOLON  reduce 53
	COMMA  reduce 53
	AND_OPERATOR  reduce 53
	OR_OPERATOR  reduce 53


state 96
	bgrd : EXCLAMATION_POINT bgrd .  (51)

	.  reduce 51


state 97
	atom : LPAREN exp RPAREN .  (69)

	.  reduce 69


state 98
	atom : atom DOT . IDENTIFIER  (64)

	IDENTIFIER  shift 122
	.  error


state 99
	atom : atom LPAREN . explist RPAREN  (65)
	explist : .  (71)

	MINUS  shift 68
	LPAREN  shift 52
	EXCLAMATION_POINT  shift 69
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 71
	STRING_LITERAL  shift 72
	INTLIT  shift 73
	RPAREN  reduce 71

	exp  goto 118
	atom  goto 75
	explist  goto 123
	bexp  goto 76
	aexp  goto 77
	sexp  goto 78
	rexp  goto 79
	bgrd  goto 80
	ftr  goto 81
	exprlists  goto 120


state 100
	bop : ASSSIGN . ASSSIGN  (50)

	ASSSIGN  shift 124
	.  error


state 101
	aexp : aexp PLUS . aexp  (55)

	MINUS  shift 68
	LPAREN  shift 52
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	IDENTIFIER  shift 71
	INTLIT  shift 73
	.  error

	atom  goto 93
	aexp  goto 125
	ftr  goto 81


state 102
	aexp : aexp MINUS . aexp  (56)

	MINUS  shift 68
	LPAREN  shift 52
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	IDENTIFIER  shift 71
	INTLIT  shift 73
	.  error

	atom  goto 93
	aexp  goto 126
	ftr  goto 81


state 103
	aexp : aexp MULTIPLY . aexp  (57)

	MINUS  shift 68
	LPAREN  shift 52
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	IDENTIFIER  shift 71
	INTLIT  shift 73
	.  error

	atom  goto 93
	aexp  goto 127
	ftr  goto 81


state 104
	aexp : aexp DIVIDE . aexp  (58)

	MINUS  shift 68
	LPAREN  shift 52
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	IDENTIFIER  shift 71
	INTLIT  shift 73
	.  error

	atom  goto 93
	aexp  goto 128
	ftr  goto 81


state 105
	bop : RELATIVE_OPERATOR .  (48)

	.  reduce 48


state 106
	bop : EXCLAMATION_POINT . ASSSIGN  (49)

	ASSSIGN  shift 129
	.  error


state 107
	rexp : aexp bop . aexp  (46)

	MINUS  shift 68
	LPAREN  shift 52
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	IDENTIFIER  shift 71
	INTLIT  shift 73
	.  error

	atom  goto 93
	aexp  goto 130
	ftr  goto 81


state 108
	bexp : rexp AND_OPERATOR . rexp  (44)

	MINUS  shift 68
	LPAREN  shift 52
	EXCLAMATION_POINT  shift 69
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 71
	INTLIT  shift 73
	.  error

	atom  goto 131
	aexp  goto 132
	rexp  goto 133
	bgrd  goto 80
	ftr  goto 81


state 109
	bexp : rexp OR_OPERATOR . rexp  (45)

	MINUS  shift 68
	LPAREN  shift 52
	EXCLAMATION_POINT  shift 69
	THIS_KEYWORD  shift 56
	NEW_KEYWORD  shift 57
	NULL_KEYWORD  shift 60
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 71
	INTLIT  shift 73
	.  error

	atom  goto 131
	aexp  goto 132
	rexp  goto 134
	bgrd  goto 80
	ftr  goto 81


state 110
	stmt : IF_KEYWORD LPAREN exp . RPAREN LBRACKET stmtpositive RBRACKET ELSE_KEYWORD LBRACKET stmtpositive RBRACKET  (31)

	RPAREN  shift 135
	.  error


state 111
	stmt : RETURN_KEYWORD exp SEMICOLON .  (38)

	.  reduce 38


state 112
	stmt : WHILE_KEYWORD LPAREN exp . RPAREN LBRACKET stmtkleene RBRACKET  (32)

	RPAREN  shift 136
	.  error


state 113
	atom : NEW_KEYWORD CLASSNAME LPAREN . RPAREN  (68)

	RPAREN  shift 137
	.  error


state 114
	stmt : READLN_KEYWORD LPAREN IDENTIFIER . RPAREN SEMICOLON  (33)

	RPAREN  shift 138
	.  error


state 115
	stmt : PRINTLN_KEYWORD LPAREN exp . RPAREN SEMICOLON  (34)

	RPAREN  shift 139
	.  error


state 116
	stmt : IDENTIFIER ASSSIGN exp . SEMICOLON  (35)

	SEMICOLON  shift 140
	.  error


state 117
	stmt : atom DOT IDENTIFIER . ASSSIGN exp SEMICOLON  (36)
	atom : atom DOT IDENTIFIER .  (64)

	ASSSIGN  shift 141
	DOT  reduce 64
	LPAREN  reduce 64


state 118
	exprlists : exp .  (73)

	.  reduce 73


state 119
	stmt : atom LPAREN explist . RPAREN  (37)
	atom : atom LPAREN explist . RPAREN  (65)

	RPAREN  shift 142
	.  error


state 120
	explist : exprlists .  (72)
	exprlists : exprlists . COMMA exp  (74)

	COMMA  shift 143
	RPAREN  reduce 72


state 121
	mddecllist : typee IDENTIFIER LPAREN . fmllist RPAREN mdbody mddecllist  (12)
	fmllist : .  (17)

	VOID_KEYWORD  shift 16
	CLASSNAME  shift 17
	INT_KEYWORD  shift 18
	BOOL_KEYWORD  shift 19
	STRING_KEYWORD  shift 20
	RPAREN  reduce 17

	fmllist  goto 144
	typee  goto 25


state 122
	atom : atom DOT IDENTIFIER .  (64)

	.  reduce 64


state 123
	atom : atom LPAREN explist . RPAREN  (65)

	RPAREN  shift 145
	.  error


state 124
	bop : ASSSIGN ASSSIGN .  (50)

	.  reduce 50


state 125
	aexp : aexp . PLUS aexp  (55)
	aexp : aexp PLUS aexp .  (55)
	aexp : aexp . MINUS aexp  (56)
	aexp : aexp . MULTIPLY aexp  (57)
	aexp : aexp . DIVIDE aexp  (58)

	MULTIPLY  shift 103
	DIVIDE  shift 104
	ASSSIGN  reduce 55
	PLUS  reduce 55
	MINUS  reduce 55
	RELATIVE_OPERATOR  reduce 55
	RPAREN  reduce 55
	EXCLAMATION_POINT  reduce 55
	SEMICOLON  reduce 55
	COMMA  reduce 55
	AND_OPERATOR  reduce 55
	OR_OPERATOR  reduce 55

